debug plot in ipynb file

--- a/notebooks/VisualWidget.ipynb
+++ b/notebooks/VisualWidget.ipynb
@@ -2,19 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "id": "0d7d7f10",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "attempted relative import with no known parent package",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-32-5a5de4b69d7b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mleaf_cc\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdata_visualisation\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mdv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdata_visualisation\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mdv2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: attempted relative import with no known parent package"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "from leaf_cc import database as db\n",
-    "from leaf_cc import data_visualisation as dv"
+    "from leaf_cc import data_visualisation as dv\n",
+    "import matplotlib.pyplot as plt\n",
+    "from .. import data_visualisation as dv2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "0aee509a",
    "metadata": {},
    "outputs": [],
@@ -29,14 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "6045e2a0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d05cc19d68f14c759a66db03a38de1b7",
+       "model_id": "f083baeabaca4d17acf5472effefe9bc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -50,7 +64,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d10ac69d70b4cddbffd032eda17ae99",
+       "model_id": "9c916543dee64196a4b9a75801b5b310",
        "version_major": 2,
        "version_minor": 0
       },
@@ -64,7 +78,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3ebe2627f6324ea3aa89b27470cbe4df",
+       "model_id": "e6cad6b0f6bd454da09dbce5f04a2cf3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -78,7 +92,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b72b373affdb4b299b0f8878aa5b25f0",
+       "model_id": "1b0a553d439d48cfae5e1f4ee6a86d8c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -96,35 +110,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "7ad188eb",
    "metadata": {},
    "outputs": [],
    "source": [
     "data = dv.run_pca(X_train, y_train, mean_widget, std_widget, x_widget)\n",
-    "rfig_pca = dv.plot_pca(data)"
+    "rfig_pca = dv.plot_pca(data)\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "e995bf2e",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'show'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-8971aacf6819>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfig_var\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'show'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Figure(896x504)\n",
+      "<class 'matplotlib.figure.Figure'>\n"
      ]
     }
    ],
    "source": [
-    "fig_var.show()"
+    "print(fig_var)\n",
+    "print(type(fig_var))\n",
+    "\n",
+    "ax = fig_var.get_axes()\n",
+    "plt.show()\n",
+    "fig_var.canvas.show()\n",
+    "fig_var.figure.canvas.draw()\n",
+    "ax = fig_var.gca()\n",
+    "ax.plot()\n",
+    "plt.show()"
    ]
   },
   {
